--- a/config/bootloaders/extlinux/menu.cfg
+++ b/config/bootloaders/extlinux/menu.cfg
@@ -1,12 +1,12 @@
-menu hshift 0
-menu width 82
+menu hshift 7
+menu width 60
 
 menu title Boot menu
 include stdmenu.cfg
 include live.cfg
 include install.cfg
 menu begin advanced
-	menu title Advanced options
+	menu title ^Advanced options
 	include stdmenu.cfg
 	label mainmenu
 		menu label ^Back..
