--- a/auto/config
+++ b/auto/config
@@ -5,7 +5,7 @@ MIRROR_SECURITY="security.debian.org/"
 APT_PROXY="http://127.0.0.1:3142/"
 APT_CACHER="${APT_PROXY}${MIRROR_DEBIAN}"
 
-DISTRIBUTION="jessie"
+DISTRIBUTION="stretch"
 ARCH="amd64"
 MODE="debian"
 BOOTAPPEND_LIVE="boot=live config persistence splash noautologin locales=ja_JP.UTF-8 keyboard-layouts=jp"
@@ -18,7 +18,7 @@ lb config noauto \
   --archive-areas "main contrib non-free" \
   --bootappend-live "${BOOTAPPEND_LIVE}" \
   --debian-installer live \
-  --debian-installer-distribution jessie \
+  --debian-installer-distribution "${DISTRIBUTION}" \
   --debug true \
   --distribution "${DISTRIBUTION}" \
   --firmware-binary true \
